# ChangeLog for media-gfx/brlcad
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/brlcad/ChangeLog,v 1.3 2011/04/18 22:47:37 dilfridge Exp $

  28 April 2015; Dongxu Li <dongxuli2011@gmail.com>
  brlcad-7.24.2.ebuild, brlcad-9999.ebuild:
  Fixed a deps issue

  4 July 2013; Dongxu Li <dongxuli2011@gmail.com> +brlcad-7.24.0.ebuild:
  Version bumped to 7.24.0

  14 Jun 2013; Justin Lecher <jlec@gentoo.org> brlcad-9999.ebuild,
  metadata.xml:
  Drop KEYWORDS of live ebuilds

*brlcad-7.22.0 (6 May 2013)

  5 May 2013; Dongxu Li <dongxuli2011@gmail.com> brlcad-9999.ebuild +brlcad-7.22.0.ebuild:
  version bumped to 7.22.0

  27 Mar 2012; Dongxu Li <dongxuli2011@gmail.com> brlcad-9999.ebuild +files/brlcad-7.20.4-cmake.patch:
  added missing patch for 7.20.4

  12 Feb 2012; Dongxu Li <dongxuli2011@gmail.com> -brlcad-7.20.2.ebuild brlcad-7.20.4.ebuild:
  Removed 7.20.2 for building issues. Fixed 7.20.4 for as-needed

  11 Feb 2012; Dongxu Li <dongxuli2011@gmail.com> brlcad-7.20.4.ebuild:
  fixed as-needed filtering

  5 Feb 2012; Dongxu Li <dongxuli2011@gmail.com> brlcad-9999.ebuild:
  Use system libraries

  16 Dec 2011; Dongxu Li <dongxuli2011@gmail.com> +brlcad-7.20.4.ebuild brlcad-9999.ebuild:
  version bumped to 7.20.4; svn version updated

  26 Sep 2011; Dongxu Li <dongxuli2011@gmail.com> brlcad-7.20.2.ebuild:
  Included libpng15 patch by Ian Stakenvicius, bug#378273

  18 Aug 2011; Dongxu Li <dongxuli2011@gmail.com> brlcad-9999.ebuild:
  Fixed an ebuild configuration issue

  15 Aug 2011; Dongxu Li <dongxuli2011@gmail.com> -brlcad-7.20.2-r1.ebuild:
  removed cmake ebuild for 7.20.2, waiting for upstream to fix the tcl/tk building issue with cmake

  15 Aug 2011; Dongxu Li <dongxuli2011@gmail.com> brlcad-9999.ebuild:
  Enable using system tcl/tk for the svn live build

  09 Aug 2011; Dongxu Li <dongxuli2011@gmail.com> +brlcad-9999.ebuild brlcad-7.20.2-r1.ebuild: