@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-gfx/brlcad/ChangeLog,v 1.3 2011/04/18 22:47:37 dilfridge Exp $
 
+  21 May 2015; Dongxu Li <dongxuli2011@gmail.com>
+  brlcad-7.24.2.ebuild, brlcad-9999.ebuild:
+  Fixed deps tcl/tk slots
+
   28 April 2015; Dongxu Li <dongxuli2011@gmail.com>
   brlcad-7.24.2.ebuild, brlcad-9999.ebuild:
   Fixed a deps issue
